syntax = "proto3";

package notifications;

option go_package = "ethos/api/proto/notifications";

import "google/protobuf/timestamp.proto";

// NotificationType represents types of notifications
enum NotificationType {
  NOTIFICATION_TYPE_UNSPECIFIED = 0;
  NOTIFICATION_TYPE_FEEDBACK_REPLY = 1;
  NOTIFICATION_TYPE_FEEDBACK_RECEIVED = 2;
  NOTIFICATION_TYPE_NEW_COMMENT = 3;
  NOTIFICATION_TYPE_SYSTEM_ALERT = 4;
  NOTIFICATION_TYPE_REMINDER = 5;
  NOTIFICATION_TYPE_OTHER = 6;
}

// Notification represents a notification
message Notification {
  string notification_id = 1;
  NotificationType type = 2;
  string message = 3;
  bool read = 4;
  google.protobuf.Timestamp created_at = 5;
}

// NotificationPreferences represents delivery preferences
message NotificationPreferences {
  bool email = 1;
  bool push = 2;
  bool in_app = 3;
}

// GetNotificationsRequest requests paginated notifications
message GetNotificationsRequest {
  string user_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

// GetNotificationsResponse returns paginated notifications
message GetNotificationsResponse {
  repeated Notification notifications = 1;
  int32 count = 2;
  int32 unread_count = 3;
}

// GetPreferencesRequest requests notification preferences
message GetPreferencesRequest {
  string user_id = 1;
}

// GetPreferencesResponse returns notification preferences
message GetPreferencesResponse {
  NotificationPreferences preferences = 1;
}

// UpdatePreferencesRequest updates notification preferences
message UpdatePreferencesRequest {
  string user_id = 1;
  NotificationPreferences preferences = 2;
}

// UpdatePreferencesResponse confirms preference update
message UpdatePreferencesResponse {
  NotificationPreferences preferences = 1;
}

// NotificationService provides notification operations
service NotificationService {
  // GetNotifications retrieves paginated notifications for a user
  rpc GetNotifications(GetNotificationsRequest) returns (GetNotificationsResponse);
  
  // GetPreferences retrieves notification preferences
  rpc GetPreferences(GetPreferencesRequest) returns (GetPreferencesResponse);
  
  // UpdatePreferences updates notification preferences
  rpc UpdatePreferences(UpdatePreferencesRequest) returns (UpdatePreferencesResponse);
}

